Testing add and delete button and hiding and showing two different forms, filling dropdown with ajax.  Need to figure out how to stop forms from flashing visible on page load.

--- a/css/layout.css
+++ b/css/layout.css
@@ -6,6 +6,10 @@
   clear: both;
 }
 
+.collapse {
+  display: none;
+}
+
 .flex-container {
     display:flex;
     flex-direction: row;
