--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,11 @@ h1,h2,h3,h4,h5,h6 {
     color: #5DA9AB;
   }
 }
+
+#form__delete {
+  visibility: hidden;
+}
+
+#form__add-new {
+  visibility: hidden;
+}
